--- a/html/index.html
+++ b/html/index.html
@@ -13,16 +13,40 @@
 <h1 class="text-center h1 fw-light">Hey 👋</h1>
 </div>
 <section class="s1">
-    <p class="text-center welcome fw-light">Hello! It's me, Tymo. See below to see my short bio.</p>
+    <p class="text-center welcome fw-light">Hello! My name is Tymoteusz Kuczera. See below to see my short bio.</p>
 </section>
 <div class="header">
     <h1 class="text-center h1 fw-light">So, who am I?</h1>
 </div>
-<div class="h6">
-    <h6 class="text-center h6 fw-light">I am passioner of new technology, programming, Cental Asia and the Balkans. <br>In 2022, I was Infoshare volunteer. I've been studying frontend since 2021, because my friend, Samuel inspired me.<br> In 2020 I collaborated with one technological portal. Before, I tried to learm some Bash.<br>Privately, I am passioner of history of the world, especially South America, Central Asia(Kazakstan, Uzbekistan, Kyrgyzstan, Tajikistan, Turkmenistan) and the Balkans.<br>You can DM me on Twitter and Discord and ask some questions, if you want to.</h6>
+<div class="row">
+    <div class="col-sm-6">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Programming passioner</h5>
+                <p class="card-text">I've been trying to learn programming since 2018. Previously I tried Swift, during COVID pandemic it was C++. From early 2021, I started learning frontend.<br></p>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Central Asia and the Balkans passioner.</h5>
+                <p class="card-text">I am passioner about history of former Yugoslavia, Uzbekistan, Kyrgyzstan, Kazakhstan, Tajikistan, Turkmenistan, and also some countries from South America, like Argentine.</p>
+            </div>
+        </div>
+    </div>
 </div>
 <footer class="footer">
-    <a class="btn btn-primary" href="https://discord.gg/F8e3ZhYU" role="button">Join my Discord server!</a>
+    <div class="header">
+        <h1 class="text-center h1 fw-light">How to contact me?</h1>
+    </div>
+    <br>
+    <div class="container text-center">
+        <div class="row row-cols-2">
+            <a class="btn btn-info btnsm" href=" https://twitter.com/official_tymo" role="button">See my Twitter!</a>
+            <a class="btn btn-primary btnsm" href="https://discord.gg/F8e3ZhYU" role="button">Join my Discord server!</a>
+        </div>
+    </div>
 </footer>
 </body>
 </html>
