--- a/html/index.html
+++ b/html/index.html
@@ -7,16 +7,16 @@
     <title>Title</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
-<body class="bg-dark">
+<body class="bg-dark body">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 <div class="header">
-<h1 class="text-center h1 fw-light">Hey 👋</h1>
+<h1 class="text-center h1 text-white bg-dark">Hey 👋</h1>
 </div>
 <section class="s1">
-    <p class="text-center welcome fw-light">Hello! My name is Tymoteusz Kuczera. See below to see my short bio.</p>
+    <p class="text-center welcome text-white bg-dark">Hello! My name is Tymoteusz Kuczera. See below to see my short bio.</p>
 </section>
 <div class="header">
-    <h1 class="text-center h1 fw-light">So, who am I?</h1>
+    <h1 class="text-center h1 text-white bg-dark">So, who am I?</h1>
 </div>
 <div class="row">
     <div class="col-sm-6">
@@ -38,14 +38,18 @@
 </div>
 <footer class="footer">
     <div class="header">
-        <h1 class="text-center h1 fw-light">How to contact me?</h1>
+        <h1 class="text-center h1 text-white bg-dark">How to contact me?</h1>
     </div>
     <br>
     <div class="container text-center">
-        <div class="row row-cols-2">
-            <a class="btn btn-info btnsm" href=" https://twitter.com/official_tymo" role="button">See my Twitter!</a>
-            <a class="btn btn-primary btnsm" href="https://discord.gg/F8e3ZhYU" role="button">Join my Discord server!</a>
-        </div>
+
+            <div class="btn-group">
+                <a href="https://twitter.com/official_tymo" class="btn btn-info">Twitter</a>
+                <a href="https://discord.gg/F8e3ZhYU" class="btn btn-primary">Discord server</a>
+            </div>
+    </div>
+    <div class="header">
+        <h1 class="text-center h1 text-white bg-dark">Remember that this website is still under development</h1>
     </div>
 </footer>
 </body>
